# portage-exporter

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  go.mod
.github/workflows/: release.yml
cmd/portage-exporter/: main.go
portage/vdb/: vdb.go
src/: main.cc  vdb.cc  vdb.hh
